--- a/index.html
+++ b/index.html
@@ -773,9 +773,9 @@
         <div class="menu-sections" id="menuSections">
             <button type="button" onclick="showMenu('male')">ハンド</button>
             <button type="button" onclick="showMenu('malenew')">フット</button>
-            <button type="button" onclick="showMenu('female')">脱毛女性メニュー</button>
-            <button type="button" onclick="showMenu('femalenew')">⭐女性新規様限定メニュー⭐</button>
-            <button type="button" onclick="showMenu('eyebrow')">脱毛子供メニュー</button>
+            <button type="button" onclick="showMenu('female')">フラットラッシュ</button>
+            <button type="button" onclick="showMenu('femalenew')">ボリュームラッシュ</button>
+            <button type="button" onclick="showMenu('eyebrow')">まつ毛パーマ</button>
         </div>
 
         <div id="male" class="menu-section">
@@ -826,49 +826,44 @@
 
         <div id="female" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">◆脱毛メニュー◆<br><br>---女性限定---</span>
+                <span class="highlight-text">フラットラッシュ</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment10')" data-price="16800">全身(顔+VIOあり)</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment11')" data-price="11800">全身(顔+VIOなし)</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment12')" data-price="5800">お好きなパーツ3箇所</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment13')" data-price="8800">お好きなパーツ5箇所</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment14')" data-price="5800">お顔かVIO</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment15')" data-price="8800">お顔とVIO</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment10')" data-price="16800">フラットラッシュ（80本まで）</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment11')" data-price="11800">フラットラッシュ（100本まで）</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment12')" data-price="5800">フラットラッシュ（120本まで）</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment13')" data-price="8800">フラットラッシュ（140本まで）</button>
+            </div>
+            <div class="label">オフ有りですか？<span class="required">必須</span></div>
+            <div class="second-buttons">
+                <button type="button" id="firstsecondanniversary" onclick="selectsecondanniversary(this)">はい</button>
+                <button type="button" id="repeatsecondanniversary" onclick="selectsecondanniversary(this)">いいえ</button>
+            </div>
+            <div class="label">アイシャンプーは希望ですか？<span class="required">必須</span></div>
+            <div class="shampoo-buttons">
+                <button type="button" id="firstshampoo" onclick="selectshampoo(this)">はい</button>
+                <button type="button" id="repeatshampoo" onclick="selectshampoo(this)">いいえ</button>
             </div>
         </div>
 
         <div id="femalenew" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">⭐女性新規様限定メニュー⭐</span>
+                <span class="highlight-text">ボリュームラッシュ</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment16')" data-price="1500">1パーツ脱毛体験</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment17')" data-price="3900">3パーツ脱毛体験</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment18')" data-price="5800">フェイシャル体験45分</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment19')" data-price="5800">ボディートリートメント</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment16')" data-price="1500">ボリュームラッシュ（80束まで）</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment17')" data-price="3900">ボリュームラッシュ（100束まで）</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment18')" data-price="5800">ボリュームラッシュ（120束まで）</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment19')" data-price="5800">ボリュームラッシュ（140束まで）</button>
             </div>
         </div>
 
         <div id="eyebrow" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">◆脱毛メニュー◆<br><br>---子供限定---</span>
+                <span class="highlight-text">まつ毛パーマ</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment20')" data-price="500">ワキ(子供)</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment21')" data-price="1800">お顔(子供)</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment22')" data-price="3800">お好きなパーツ3箇所(子供)</button>
-            </div>
-        </div>
-
-        <div id="whiteningmale" class="menu-section">
-            <div class="highlight-background">
-                <span class="highlight-text">◆エステメニュー男性◆</span>
-            </div>
-            <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment23')" data-price="11000">スピキュール✖️漢方フェイシャルコース</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment24')" data-price="8800">光フォトfacialコース</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment25')" data-price="15300">エクソソームフェイシャル</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment20')" data-price="500">まつ毛パーマ</button>
             </div>
         </div>
 
@@ -919,6 +914,7 @@
         let visitCount = '';
         let secondsecondanniversaryCount = '';
         let secondlongCount = '';
+        let shampooCount = '';
         let selectedSymptom = [];  // 配列として定義
         let selectedFullDate = '';
         let currentDate = new Date();
@@ -1207,6 +1203,21 @@ if (treatmentId === 'treatment1') {
             fetchAvailability(currentDate);
         }
 
+        function selectshampoo(element) {
+            document.getElementById('firstshampoo').classList.remove('active');
+            document.getElementById('repeatshampoo').classList.remove('active');
+            element.classList.add('active');
+            secondshampooCount = element.innerText;
+
+            // 選択された訪問回数に対応する時間を取得
+            selectedshampooTime = secondTimes[secondshampooCount];
+
+            console.log('選択された訪問回数の時間:', selectedshampooTime);
+
+            // カレンダーを更新するために取得する日付を渡す
+            fetchAvailability(currentDate);
+        }
+
         function selectlong(element) {
             document.getElementById('firstlong').classList.remove('active');
             document.getElementById('repeatlong').classList.remove('active');
@@ -1406,6 +1417,7 @@ if (treatmentId === 'treatment1') {
                 selectedSymptom: selectedSymptom,
                 secondsecondanniversaryCount: secondsecondanniversaryCount,
                 secondsecondanniversaryCount: secondlongCount,
+                secondshampooCount: secondshampooCount,
                 irradiationsCount: irradiationsCount,
                 dates: [selectedFullDate],
                 message: document.getElementById('message').value
@@ -1420,7 +1432,7 @@ if (treatmentId === 'treatment1') {
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\n長さだし：${formData.secondsecondanniversaryCount}\nオフ有り：${formData.secondsecondanniversaryCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\n長さだし：${formData.secondsecondanniversaryCount}\nオフ有り：${formData.secondlongCount}\nアイシャンプー：${formData.secondshampooCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
