--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
         .visit-buttons,
         .second-buttons,
         .long-buttons,
+        .shampoo-buttons,
         .symptoms,
         .menu-sections,
         .irradiations {
@@ -187,6 +188,7 @@
         .visit-buttons button,
         .symptoms button,
         .long-buttons button,
+        .shampoo-buttons button,
         .second-buttons button,
         .menu-sections button,
         .irradiations button {
@@ -204,6 +206,7 @@
         .visit-buttons button.active,
         .symptoms button.active,
         .long-buttons button.active,
+        .shampoo-buttons button.active,
         .second-buttons button.active,
         .menu-sections button.active,
         .irradiations button.active {
@@ -856,6 +859,16 @@
                 <button type="button" onclick="selectSymptom(this, 'treatment18')" data-price="5800">ボリュームラッシュ（120束まで）</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment19')" data-price="5800">ボリュームラッシュ（140束まで）</button>
             </div>
+            <div class="label">オフ有りですか？<span class="required">必須</span></div>
+            <div class="second-buttons">
+                <button type="button" id="firstsecondanniversary" onclick="selectsecondanniversary(this)">はい</button>
+                <button type="button" id="repeatsecondanniversary" onclick="selectsecondanniversary(this)">いいえ</button>
+            </div>
+            <div class="label">アイシャンプーは希望ですか？<span class="required">必須</span></div>
+            <div class="shampoo-buttons">
+                <button type="button" id="firstshampoo" onclick="selectshampoo(this)">はい</button>
+                <button type="button" id="repeatshampoo" onclick="selectshampoo(this)">いいえ</button>
+            </div>
         </div>
 
         <div id="eyebrow" class="menu-section">
@@ -864,6 +877,11 @@
             </div>
             <div class="symptoms">
                 <button type="button" onclick="selectSymptom(this, 'treatment20')" data-price="500">まつ毛パーマ</button>
+            </div>
+            <div class="label">アイシャンプーは希望ですか？<span class="required">必須</span></div>
+            <div class="shampoo-buttons">
+                <button type="button" id="firstshampoo" onclick="selectshampoo(this)">はい</button>
+                <button type="button" id="repeatshampoo" onclick="selectshampoo(this)">いいえ</button>
             </div>
         </div>
 
