--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@
         let visitCount = '';
         let secondsecondanniversaryCount = '';
         let secondlongCount = '';
-        let shampooCount = '';
+        let secondshampooCount = '';
         let selectedSymptom = [];  // 配列として定義
         let selectedFullDate = '';
         let currentDate = new Date();
