--- a/index.html
+++ b/index.html
@@ -1449,7 +1449,7 @@ if (treatmentId === 'treatment1') {
                 visitCount: visitCount,
                 selectedSymptom: selectedSymptom,
                 secondsecondanniversaryCount: secondsecondanniversaryCount,
-                secondsecondanniversaryCount: secondlongCount,
+                secondlongCount: secondlongCount,
                 secondshampooCount: secondshampooCount,
                 irradiationsCount: irradiationsCount,
                 dates: [selectedFullDate],
