--- a/index.html
+++ b/index.html
@@ -858,10 +858,10 @@
         let selectedirradiationsTime = 0; // 訪問回数で選択された時間
 
         let menuTimes = {
-            'もみほぐし60分': 60,
-            'もみほぐし80分': 80,
-            'もみほぐし100分': 100,
-            'もみほぐし120分': 120
+            'もみほぐし60分': 71,
+            'もみほぐし80分': 91,
+            'もみほぐし100分': 101,
+            'もみほぐし120分': 121
         };
 
 
@@ -1383,23 +1383,17 @@ for (let i = 0; i < 7; i++) {
             return slotStart < event.end && event.start < slotEnd;
         });
 
-        // 重複予約チェック：10分単位で確認
-        let overLimit = false;
-        for (let checkTime = new Date(slotStart.getTime()); checkTime < slotEnd; checkTime.setMinutes(checkTime.getMinutes() + 10)) {
-            const overlapping = availability.reduce((acc, slot) => {
-                const eventStart = new Date(slot.startTime);
-                const eventEnd = new Date(slot.endTime);
-                if (slot.title !== "営業日" && eventStart <= checkTime && checkTime < eventEnd) {
-                    acc++;
-                }
-                return acc;
-            }, 0);
-            // 既存の予約数が2件以上（自分を含めて3件以上）になる場合は上限オーバー
-            if ((overlapping + 1) >= 3) {
-                overLimit = true;
-                break;
+        // ⭐️ 重なり判定を10分刻みから区間直接比較に修正
+        const overlappingCount = availability.reduce((acc, slot) => {
+            const eventStart = new Date(slot.startTime);
+            const eventEnd = new Date(slot.endTime);
+            if (slot.title !== "営業日" && eventStart < slotEnd && eventEnd > slotStart) {
+                acc++;
             }
-        }
+            return acc;
+        }, 0);
+
+        const overLimit = (overlappingCount + 1) >= 3;
 
         // ⭐ 利用可否の最終判断（◯ or ✕）を決定するロジック
         if (isBusinessEventTime) {
