--- a/index.html
+++ b/index.html
@@ -858,10 +858,10 @@
         let selectedirradiationsTime = 0; // 訪問回数で選択された時間
 
         let menuTimes = {
-            'もみほぐし60分': 71,
-            'もみほぐし80分': 91,
-            'もみほぐし100分': 101,
-            'もみほぐし120分': 121
+            'もみほぐし60分': 60,
+            'もみほぐし80分': 80,
+            'もみほぐし100分': 100,
+            'もみほぐし120分': 120
         };
 
 
@@ -1383,17 +1383,25 @@ for (let i = 0; i < 7; i++) {
             return slotStart < event.end && event.start < slotEnd;
         });
 
-        // ⭐️ 重なり判定を10分刻みから区間直接比較に修正
-        const overlappingCount = availability.reduce((acc, slot) => {
-            const eventStart = new Date(slot.startTime);
-            const eventEnd = new Date(slot.endTime);
-            if (slot.title !== "営業日" && eventStart < slotEnd && eventEnd > slotStart) {
-                acc++;
-            }
-            return acc;
-        }, 0);
+        let overLimit = false;
 
-        const overLimit = (overlappingCount + 1) >= 3;
+// 10分刻みで最大重なり数を取得
+for (let checkTime = new Date(slotStart.getTime()); checkTime < slotEnd; checkTime.setMinutes(checkTime.getMinutes() + 10)) {
+    const overlapping = availability.reduce((acc, slot) => {
+        const eventStart = new Date(slot.startTime);
+        const eventEnd = new Date(slot.endTime);
+        if (slot.title !== "営業日" && eventStart <= checkTime && eventEnd > checkTime) {
+            acc++;
+        }
+        return acc;
+    }, 0);
+
+    // 予約を仮に入れた場合の重なり数を確認
+    if ((overlapping + 1) >= 3) {
+        overLimit = true;
+        break;
+    }
+}
 
         // ⭐ 利用可否の最終判断（◯ or ✕）を決定するロジック
         if (isBusinessEventTime) {
