--- a/index.html
+++ b/index.html
@@ -1383,25 +1383,26 @@ for (let i = 0; i < 7; i++) {
             return slotStart < event.end && event.start < slotEnd;
         });
         
-        let maxOverlapping = 0;
+        let overLimit = false;
 
-        // ⭐ checkTime <= slotEnd で最後まで含める
-        for (let checkTime = new Date(slotStart.getTime()); checkTime <= slotEnd; checkTime.setMinutes(checkTime.getMinutes() + 10)) {
-            const overlapping = availability.reduce((acc, slot) => {
-                const eventStart = new Date(slot.startTime);
-                const eventEnd = new Date(slot.endTime);
-                if (slot.title !== "営業日" && eventStart <= checkTime && eventEnd > checkTime) {
-                    acc++;
-                }
-                return acc;
-            }, 0);
-
-            if (overlapping > maxOverlapping) {
-                maxOverlapping = overlapping;
-            }
+// 予約の開始から終了まで10分刻みで確認
+for (let checkTime = new Date(slotStart.getTime()); checkTime < slotEnd; checkTime.setMinutes(checkTime.getMinutes() + 10)) {
+    const overlapping = availability.reduce((acc, slot) => {
+        const eventStart = new Date(slot.startTime);
+        const eventEnd = new Date(slot.endTime);
+        // 営業日以外のイベントで、checkTimeがイベント中に含まれる場合カウント
+        if (slot.title !== "営業日" && eventStart <= checkTime && eventEnd > checkTime) {
+            acc++;
         }
+        return acc;
+    }, 0);
 
-        const overLimit = (maxOverlapping + 1) >= 3;
+    // 仮予約を入れた場合の重なりが3件以上なら即NG
+    if (overlapping + 1 >= 3) {
+        overLimit = true;
+        break;
+    }
+}
 
         // ⭐ 利用可否の最終判断（◯ or ✕）を決定するロジック
         if (isBusinessEventTime) {
