--- a/index.html
+++ b/index.html
@@ -1385,22 +1385,36 @@ for (let i = 0; i < 7; i++) {
         
         let overLimit = false;
 
-// 予約の開始から終了まで10分刻みで確認
-for (let checkTime = new Date(slotStart.getTime()); checkTime < slotEnd; checkTime.setMinutes(checkTime.getMinutes() + 10)) {
+// 10分刻みで予約時間中を確認
+for (let checkTime = new Date(slotStart.getTime()); checkTime < slotEnd; checkTime.setMinutes(checkTime.getMinutes() + 5)) {
     const overlapping = availability.reduce((acc, slot) => {
         const eventStart = new Date(slot.startTime);
         const eventEnd = new Date(slot.endTime);
-        // 営業日以外のイベントで、checkTimeがイベント中に含まれる場合カウント
         if (slot.title !== "営業日" && eventStart <= checkTime && eventEnd > checkTime) {
             acc++;
         }
         return acc;
     }, 0);
 
-    // 仮予約を入れた場合の重なりが3件以上なら即NG
     if (overlapping + 1 >= 3) {
         overLimit = true;
         break;
+    }
+}
+
+// 最後の終了時間を個別確認
+if (!overLimit) {
+    const overlappingAtEnd = availability.reduce((acc, slot) => {
+        const eventStart = new Date(slot.startTime);
+        const eventEnd = new Date(slot.endTime);
+        if (slot.title !== "営業日" && eventStart <= slotEnd && eventEnd > slotEnd) {
+            acc++;
+        }
+        return acc;
+    }, 0);
+
+    if (overlappingAtEnd + 1 >= 3) {
+        overLimit = true;
     }
 }
 
